--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apple_website",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://github.com/SamAditya09/iPhone-Redesign/",
+  "homepage": "https://samaditya09.github.io/iPhone-Redesign/",
   "type": "module",
   "scripts": {
     "predeploy" : "npm run build",
